<resources>
    <string name="app_name">ToDo</string>
    <string name="action_settings">Settings</string>
    <string name="add_item">Add Item</string>
    <string name="enter_item">Enter Task</string>
    <string name="hint_popup_name">Name of task</string>
    <string name="hint_popup_time_duration">Time duration</string>
    <string name="save_button">Save</string>
    <string name="confirm_title">Are you sure?</string>
    <string name="confirm_no_text">No</string>
    <string name="confirm_yes_text">Yes</string>
    <string name="update_save_button_text">Update</string>
    <string name="edit_popup_title">Edit Task</string>
</resources>
