<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popup_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/popup_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/enter_item"
                android:textSize="18sp"
                android:textStyle="italic"/>

            <EditText
                android:id="@+id/popup_name"
                android:hint="@string/hint_popup_name"
                android:layout_below="@id/popup_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/popup_time_duration"
                android:hint="@string/hint_popup_time_duration"
                android:layout_below="@id/popup_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/popup_save_button"
                android:layout_below="@id/popup_time_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/save_button"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:background="@color/colorAccent"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>